# protobufkdb

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  travis_setup.sh
.github/workflows/: build_linux.yml  build_mac.yml  build_win.yml  release-assets.yml
docker_linux/: Dockerfile.build  protobufkdb_build.bat  protobufkdb_build.sh
docs/: README.md  examples.md  protobuf-types.md  reference.md
examples/: README.md  arena.q  examples.q  examples_dynamic.q  handling_files.q  map.q  message_fields.q  one_of.q  oneof.q  repeated.q  runtests.q  runtests_dynamic.q  same_type.q  scalar.q  sub_message.q  type_specifier.q
proto/: examples_dynamic.proto  import_example.proto  tests_dynamic.proto  tests_proto2_dynamic.proto  tests_proto3_dynamic.proto
proto/google/protobuf/: descriptor.proto
q/: protobufkdb.q
src/: CMakeLists.txt  KdbTypes.cpp  KdbTypes.h  MapValues.cpp  MapValues.h  MessageFactory.cpp  MessageFactory.h  MessageFormat.cpp  MessageFormat.h  MessageParser.cpp  MessageParser.h  ProtoHeaders.h  ProtobufKdb.cpp  ProtobufKdb.h  RepeatedValues.cpp  RepeatedValues.h  ScalarValues.cpp  ScalarValues.h  TypeCheck.h  examples.proto  tests.proto
tests/: runtests.t  runtests_dynamic.t  test.t  test_helper_function.q
tests_proto2/: test.t
tests_proto3/: test.t  test_helper_function.q
